kustomize/deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: random-gif-develop
  namespace: default
  labels:
    app: random-gif
    ref: develop
    user: "4"
    job_number: "9893"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: random-gif
        ref: "feature-foo"
    spec:
      containers:
      - name: random-gif
        imagePullPolicy: Always
        image: "whereismyjetpack/random-gif:feature-foo"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
