kustomize/ing.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: random-gif-develop
  labels:
    app: random-gif
    ref: develop
  annotations:
      kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: develop-random-gif.qa.k8s.psu.edu
      http:
        paths:
          - path: /
            backend:
              serviceName: random-gif-develop
              servicePort: 8080
